terraform/core-infra/resources.tf
# Direct state file to S3 bucket and connect DynamoDB table
terraform {
  backend "s3" {
    bucket         = "nmilligan-tf-states"
    key            = "core-infra/terraform.tfstate"
    region         = "us-east-1"
    use_lockfile   = true
    encrypt        = true
  }
}

locals {
  root_domain  = "banksie.app"
  subdomain    = "www.banksie.app"
  api_domain   = "api.banksie.app"
  s3_origin_id = "s3origin"
}

# Create VPC
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

# Create internet gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}

# Create public subnets
resource "aws_subnet" "public_a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.101.0/24"
  availability_zone = "us-east-1a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "public_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.102.0/24"
  availability_zone = "us-east-1b"
  map_public_ip_on_launch = true
}

# Create public route table and connect internet gateway
resource "aws_route_table" "route_table" {
  vpc_id = aws_vpc.main.id
  route {
      cidr_block = "0.0.0.0/0"
      gateway_id = aws_internet_gateway.igw.id
  }
}

# Connect public subnet to route table for internet access
resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.public_a.id
  route_table_id = aws_route_table.route_table.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.public_b.id
  route_table_id = aws_route_table.route_table.id
}

# Create elastic IP for NAT Gateway
resource "aws_eip" "ngw" {}

# Create NAT Gateway
resource "aws_nat_gateway" "ngw" {
  allocation_id = aws_eip.ngw.id
  subnet_id     = aws_subnet.public_a.id

  depends_on    = [aws_internet_gateway.igw]
}

# Create private route table and connect NAT gateway
resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.main.id
  route {
      cidr_block = "0.0.0.0/0"
      nat_gateway_id = aws_nat_gateway.ngw.id
  }
}

# Create private subnets
resource "aws_subnet" "private_a" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"
}

resource "aws_subnet" "private_b" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1b"
}

# Attach private subnets to private route tables
resource "aws_route_table_association" "private_a" {
  subnet_id      = aws_subnet.private_a.id
  route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_b" {
  subnet_id      = aws_subnet.private_b.id
  route_table_id = aws_route_table.private_route_table.id
}

# Create S3 bucket
resource "aws_s3_bucket" "app_bucket" {
  bucket = local.root_domain
}

# Attach bucket policy to S3 bucket for CloudFront access
resource "aws_s3_bucket_policy" "app_bucket_policy" {
  bucket = aws_s3_bucket.app_bucket.bucket
  policy = data.aws_iam_policy_document.origin_bucket_policy.json

  depends_on = [aws_cloudfront_distribution.app_distribution]
}

# Create TLS certificate for root and subdomain
resource "aws_acm_certificate" "domain_cert" {
  domain_name       = local.root_domain
  subject_alternative_names = [local.subdomain]
  validation_method = "DNS"

  lifecycle {
    create_before_destroy = true
  }
}

# Create CNAME records in hosted zone for domain/subdomain
resource "aws_route53_record" "validation_records" {
  for_each = {
    for domain in aws_acm_certificate.domain_cert.domain_validation_options : domain.domain_name => {
      name    = domain.resource_record_name
      record  = domain.resource_record_value
      type    = domain.resource_record_type
      zone_id = data.terraform_remote_state.bootstrap.outputs.hosted_zone_id
    }
  }

  allow_overwrite = true
  name            = each.value.name
  records         = [each.value.record]
  ttl             = 300
  type            = each.value.type
  zone_id         = each.value.zone_id
}

# Validate the domain/subdomain certificate using CNAME records
resource "aws_acm_certificate_validation" "cert_validation" {
  certificate_arn         = aws_acm_certificate.domain_cert.arn
  validation_record_fqdns = [for record in aws_route53_record.validation_records : record.fqdn]
}

# Create OAC for S3 bucket and CloudFront distribution
resource "aws_cloudfront_origin_access_control" "s3" {
  name                              = "s3-oac"
  origin_access_control_origin_type = "s3"
  signing_behavior                  = "always"
  signing_protocol                  = "sigv4"
}

# Create policy to prevent forwarding to S3
resource "aws_cloudfront_origin_request_policy" "ORP_policy" {
  name    = "ORP-policy"
  cookies_config {
    cookie_behavior = "whitelist"
    cookies {
      items = ["access_token_cookie", "refresh_token_cookie"]
    }
  }
  headers_config {
    header_behavior = "whitelist"
    headers {
      items = ["Content-Type"]
    }
  }
  query_strings_config {
    query_string_behavior = "none"
  }
}

# Create policy to limit caching to S3
resource "aws_cloudfront_cache_policy" "s3_cache_policy" {
  name        = "s3-cache-policy"
  default_ttl = 0
  max_ttl     = 0
  min_ttl     = 0
  parameters_in_cache_key_and_forwarded_to_origin {
    cookies_config {
      cookie_behavior = "none"
    }
    headers_config {
      header_behavior = "none"
    }
    query_strings_config {
      query_string_behavior = "none"
    }
  }
}

# Create Cloudfront distribution
resource "aws_cloudfront_distribution" "app_distribution" {
  origin {
    domain_name              = aws_s3_bucket.app_bucket.bucket_regional_domain_name
    origin_access_control_id = aws_cloudfront_origin_access_control.s3.id
    origin_id                = local.s3_origin_id
  }

  enabled             = true
  is_ipv6_enabled     = true
  default_root_object = "index.html"

  custom_error_response {
    error_code            = 404
    response_code         = 200
    response_page_path    = "/index.html"
    error_caching_min_ttl = 0
  }

  custom_error_response {
    error_code            = 403
    response_code         = 200
    response_page_path    = "/index.html"
    error_caching_min_ttl = 0
  }

  aliases = [local.root_domain, local.subdomain]

  default_cache_behavior {
    allowed_methods          = ["GET", "HEAD"]
    cached_methods           = ["GET", "HEAD"]
    target_origin_id         = local.s3_origin_id
    viewer_protocol_policy   = "redirect-to-https"
    cache_policy_id          = aws_cloudfront_cache_policy.s3_cache_policy.id 
    origin_request_policy_id = aws_cloudfront_origin_request_policy.ORP_policy.id
  }

  price_class = "PriceClass_All"

  restrictions {
    geo_restriction {
      restriction_type = "none"
      locations        = []
    }
  }  

  viewer_certificate {
    acm_certificate_arn = aws_acm_certificate.domain_cert.arn
    ssl_support_method  = "sni-only"
  }
}

# Create A records pointing to the CloudFront distribution
resource "aws_route53_record" "cloudfront" {
  for_each = aws_cloudfront_distribution.app_distribution.aliases
  zone_id  = data.terraform_remote_state.bootstrap.outputs.hosted_zone_id
  name     = each.value
  type     = "A"

  alias {
    name                   = aws_cloudfront_distribution.app_distribution.domain_name
    zone_id                = aws_cloudfront_distribution.app_distribution.hosted_zone_id
    evaluate_target_health = false
  }
}

# Create RDS security group
resource "aws_security_group" "db_sg" {
  name        = "db-sg"
  vpc_id      = aws_vpc.main.id
}

# Allow database traffic from tasks
resource "aws_security_group_rule" "allow_tasks" {
  type                     = "ingress"
  from_port                = 5432
  to_port                  = 5432
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.app_task_sg.id
  security_group_id        = aws_security_group.db_sg.id
}

# Create database subnet group to attach to VPC
resource "aws_db_subnet_group" "db_subnet_group" {
  name = "db-subnet-group"
  subnet_ids = [aws_subnet.private_a.id, aws_subnet.private_b.id]
}

# Generate random password 
resource "random_password" "db_password" {
  length  = 16
  special = true
}

# Create database instance
resource "aws_db_instance" "app_db" {
  allocated_storage           = 20
  db_name                     = "appdb"
  identifier                  = "appdb"
  engine                      = "postgres"
  instance_class              = "db.t3.micro"
  username                    = "postgres"
  password                    = random_password.db_password.result

  vpc_security_group_ids      = [aws_security_group.db_sg.id]
  db_subnet_group_name        = aws_db_subnet_group.db_subnet_group.name

  skip_final_snapshot         = true

  depends_on = [random_password.db_password]
}

# Generate random JWT secret key
resource "random_password" "jwt_secret" {
  length  = 64
  special = true
}

# Create secret for JWT secret key
resource "aws_secretsmanager_secret" "jwt_secret" {
  name = "JWT_SECRET_KEY"
}

# Add JWT secret version to secret
resource "aws_secretsmanager_secret_version" "jwt_secret" {
  secret_id     = aws_secretsmanager_secret.jwt_secret.id
  secret_string = random_password.jwt_secret.result

  depends_on = [random_password.jwt_secret]
}

# Create secret for database URL
resource "aws_secretsmanager_secret" "db_secret" {
  name = "DATABASE_URL"
}

# Add secret value to secret
resource "aws_secretsmanager_secret_version" "db_secret" {
  secret_id     = aws_secretsmanager_secret.db_secret.id
  secret_string = "postgresql://${aws_db_instance.app_db.username}:${aws_db_instance.app_db.password}@${aws_db_instance.app_db.endpoint}/${aws_db_instance.app_db.db_name}"
}

# Create private repository in ECR
resource "aws_ecr_repository" "app_repo" {
  name                 = "banksie-repo"
  image_tag_mutability = "MUTABLE"

  image_scanning_configuration {
    scan_on_push = true
  }
}

# Create cluster in ECS
resource "aws_ecs_cluster" "app_cluster" {
  name = "app-cluster"
}

# Create task execution role that allows access to Secret Manager for environment variable/secret
resource "aws_iam_role" "task_execution_role" {
  name               = "ecsTaskExecutionRole"
  assume_role_policy = data.aws_iam_policy_document.assume_role_policy.json
}

# Create policy to allow ECS to access the secrets created in Secrets Manager
resource "aws_iam_role_policy" "test_policy" {
  name = "accessSecretsManager"
  role = aws_iam_role.task_execution_role.id

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
          Action = ["secretsmanager:GetSecretValue"]
          Effect   = "Allow"
          Resource = [aws_secretsmanager_secret.db_secret.arn, aws_secretsmanager_secret.jwt_secret.arn]
      },
    ]
  })
}

# Add AWS managed task role policy to role
resource "aws_iam_role_policy_attachment" "AWS_managed_task_policy" {
  role       = aws_iam_role.task_execution_role.name
  policy_arn = "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
}

# Create CloudWatch log group for tasks
resource "aws_cloudwatch_log_group" "ecs" {
  name              = "/ecs/app-tasks"
}

# Create task definition
resource "aws_ecs_task_definition" "app_task" {
  family                   = "app-task"
  execution_role_arn       = aws_iam_role.task_execution_role.arn
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = "512"
  memory                   = "2048"
  container_definitions    = jsonencode([
    {
      name      = "app-container"
      image     = "${data.aws_caller_identity.current.account_id}.dkr.ecr.${var.region}.amazonaws.com/${aws_ecr_repository.app_repo.name}:latest"
      cpu       = 0
      essential = true
      portMappings = [
        {
          containerPort = 80
          hostPort      = 80
        }
      ]
      secrets = [
        {
          name = "DATABASE_URL"
          valueFrom = aws_secretsmanager_secret.db_secret.arn
        },
        {
          name = "JWT_SECRET_KEY"
          valueFrom = aws_secretsmanager_secret.jwt_secret.arn
        }
      ]
      logConfiguration = {
        logDriver = "awslogs"
        options = {
          "awslogs-group"         = aws_cloudwatch_log_group.ecs.name
          "awslogs-region"        = "us-east-1"
          "awslogs-stream-prefix" = "ecs"
        }
      }
    }
  ])
}

# Create security group for ECS tasks
resource "aws_security_group" "app_task_sg" {
  name        = "app-task-sg"
  vpc_id      = aws_vpc.main.id
}

# Allow HTTP traffic to tasks from LB on port 80
resource "aws_security_group_rule" "allow_alb" {
  type                     = "ingress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  source_security_group_id = aws_security_group.alb_sg.id
  security_group_id        = aws_security_group.app_task_sg.id
}

# Allow database traffic from tasks to anywhere (AWS API)
resource "aws_security_group_rule" "tasks_to_anywhere" {
  type                     = "egress"
  from_port                = 443
  to_port                  = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.app_task_sg.id
  cidr_blocks       = ["0.0.0.0/0"]
}

# Create ECS service
resource "aws_ecs_service" "app-service" {
  name                              = "banksie-task-service"
  cluster                           = aws_ecs_cluster.app_cluster.id
  task_definition                   = aws_ecs_task_definition.app_task.arn
  desired_count                     = 1
  launch_type                       = "FARGATE"

  health_check_grace_period_seconds = 30

  network_configuration {
    security_groups  = [aws_security_group.app_task_sg.id]
    subnets          = [aws_subnet.private_a.id, aws_subnet.private_b.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.app_task_tg.arn
    container_name   = "app-container"
    container_port   = 80
  }
}

# Create security group for load balancer
resource "aws_security_group" "alb_sg" {
  name        = "alb-sg"
  vpc_id      = aws_vpc.main.id
}

# Allow all HTTP traffic to LB
resource "aws_vpc_security_group_ingress_rule" "alb_alb_http" {
  security_group_id = aws_security_group.alb_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

# Allow all HTTPS traffic to LB
resource "aws_vpc_security_group_ingress_rule" "alb_alb_https" {
  security_group_id = aws_security_group.alb_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  to_port           = 443
}

# Create a load balancer
resource "aws_lb" "app_alb" {
  name               = "app-alb"
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [
    aws_subnet.public_a.id,
    aws_subnet.public_b.id
  ]
}

# Create TLS certificate for api domain
resource "aws_acm_certificate" "api_domain_cert" {
  domain_name       = local.api_domain
  validation_method = "DNS"

  lifecycle {
    create_before_destroy = true
  }
}

# Create CNAME records in hosted zone for api
resource "aws_route53_record" "api_validation_record" {
  for_each = {
    for domain in aws_acm_certificate.api_domain_cert.domain_validation_options : domain.domain_name => {
      name    = domain.resource_record_name
      record  = domain.resource_record_value
      type    = domain.resource_record_type
      zone_id = data.terraform_remote_state.bootstrap.outputs.hosted_zone_id
    }
  }

  allow_overwrite = true
  name            = each.value.name
  records         = [each.value.record]
  ttl             = 300
  type            = each.value.type
  zone_id         = each.value.zone_id
}

# Validate the api certificate using CNAME records
resource "aws_acm_certificate_validation" "api_cert_validation" {
  certificate_arn         = aws_acm_certificate.api_domain_cert.arn
  validation_record_fqdns = [for record in aws_route53_record.api_validation_record : record.fqdn]
}

# Create A record for api domain pointing to LB
resource "aws_route53_record" "alb" {
  zone_id  = data.terraform_remote_state.bootstrap.outputs.hosted_zone_id
  name     = local.api_domain
  type     = "A"

  alias {
    name                   = aws_lb.app_alb.dns_name
    zone_id                = aws_lb.app_alb.zone_id
    evaluate_target_health = false
  }
}

# Create target group for LB
resource "aws_lb_target_group" "app_task_tg" {
  name        = "app-task-tg"
  port        = 80
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = aws_vpc.main.id

  health_check {
    path    = "/health" 
  }
}

# Create listener for LB
resource "aws_lb_listener" "alb_listener" {
  load_balancer_arn = aws_lb.app_alb.arn
  port              = "443"
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = aws_acm_certificate.api_domain_cert.arn

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app_task_tg.arn
  }
}

# Create SSM parameter for CF ID 
resource "aws_ssm_parameter" "cf_id" {
  name  = "cf-id"
  type  = "String"
  value = aws_cloudfront_distribution.app_distribution.id
}
